add any put for attendance

--- a/Ensyu_E-PAN/Ensyu_E-PAN.csproj
+++ b/Ensyu_E-PAN/Ensyu_E-PAN.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="DTOs\UpdateAttendance\UpdateUserShiftRequest.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.6" />
