--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ Ensyu_E-PAN/bin/
 Ensyu_E-PAN/obj/
 # ログファイル
 *.log
-Ensyu_E-PAN/*.db
+##Ensyu_E-PAN/*.db
 
-Ensyu_E-PAN/*.db-shm
-Ensyu_E-PAN/*.db-wal
+##Ensyu_E-PAN/*.db-shm
+##Ensyu_E-PAN/*.db-wal
 
-Ensyu_E-PAN/app.db
+##Ensyu_E-PAN/app.db
